--- a/ProyectoPBD/README.rdoc
+++ b/ProyectoPBD/README.rdoc
@@ -1,3 +1,12 @@
+BOTONES:
+
+AGREGAR: btn btn-default -> AGREGAR
+CELESTE: btn btn-info -> VER
+NARANJA: btn btn-warning -> MODIFICAR
+ROJO: btn btn-danger -> ELIMINAR
+GRIS: btn btn-default -> VOLVER
+
+
 == README
 
 This README would normally document whatever steps are necessary to get the
